listening log minor update

--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -25,8 +25,7 @@
 <body>
 	<div id="frame">
 		<h2>listening logs</h2>
-		<p>these will usually be first time listens but i will mention if it isn't otherwise.</p>
-		<p>these logs are basically a more fleshed out version of my <a href="https://rateyourmusic.com/~doqmeat" target="_blank">RYM</a> yearly logs. though because i have a bit less time now, these logs will be pretty rare on my site.</p>
+		<p>thoughts n highlights of stuff i listen to!</p>
 		<h3>pages</h3>
 		<a href="2024/spring.html" target="_parent">spring 2024</a>
 		<a href="2024/winter.html" target="_parent">winter 2024</a>
@@ -39,22 +38,34 @@
 		<a href="2023/06.html" target="_parent">june 2023</a>
 		<a href="2023/05.html" target="_parent">may 2023</a>
 		<a href="2023/04.html" target="_parent">april 2023</a>
-		<h4>all logs</h4>
+
+		<h4>RYM yearly logs</h4>
+		<p>comapared to the <i>listening logs</i> on my site, these RYM lists have everything <small>new</small> i've listened to on a yearly basis.</p>
+		<a href="https://rateyourmusic.com/list/doqmeat/2024-%F0%9F%93%9D%E2%AD%90/" target="_blank" class="outlink">2024</a>
+		<a href="https://rateyourmusic.com/list/doqmeat/2023" target="_blank" class="outlink">2023</a>
+		<a href="https://rateyourmusic.com/list/doqmeat/2022" target="_blank" class="outlink">2022</a>
+
+		<h4>all listening logs</h4>
 		<details>
 			<summary>if you're looking for a specific album or artist just hit that CTRL + F and search away :D <small>(updated every time i create a new page!)</small></summary>
-			<p><a href="2024/winter.html#5">the time machine school</a> - kinoue64</p>
-			<p><a href="2024/winter.html#4">p.h.</a> - seventhlinks</p>
-			<p><a href="2024/winter.html#3">worm in the apple</a> - youra</p>
-			<p><a href="2024/winter.html#2">am i sinking or am i swimming?</a> - late night drive home</p>
-			<p><a href="2024/winter.html#1">나는야 찌질이 (i'm a loser)</a> - hongbi</p>
-			<p><a href="2023/12.html#3">yume no manimani</a> - weevildoing</p>
-			<p><a href="2023/12.html#2">delulu</a> - lexie liu</p>
-			<p><a href="2023/12.html#1">time-lapse</a> - yukika</p>
-			<p><a href="2023/11.html#5">sweet crazy love</a> - odd eye circle</p>
-			<p><a href="2023/11.html#4">bye-bye strobe</a> - erbatur</p>
-			<p><a href="2023/11.html#3">BADモード (bad mode)</a> - hikaru utada</p>
-			<p><a href="2023/11.html#2">tic! tac! toe!</a> - TAK x Corbin</p>
-			<p><a href="2023/11.html#1">melting point</a> - zerobaseone</p>
+			<p><a href="2024/sprint.html#5" target="parent">dall</a> - ARTMS</p>
+			<p><a href="2024/sprint.html#4" target="parent">3rd desire [reve]</a> - kim woo seok</p>
+			<p><a href="2024/sprint.html#3" target="parent">陽​の​か​け​ら</a> - inuha</p>
+			<p><a href="2024/sprint.html#2" target="parent">beautiful MAZE</a> - DRIPPIN</p>
+			<p><a href="2024/sprint.html#1" target="parent">non-breath oblige</a> - pinocchioP</p>
+			<p><a href="2024/winter.html#5" target="parent">the time machine school</a> - kinoue64</p>
+			<p><a href="2024/winter.html#4" target="parent">p.h.</a> - seventhlinks</p>
+			<p><a href="2024/winter.html#3" target="parent">worm in the apple</a> - youra</p>
+			<p><a href="2024/winter.html#2" target="parent">am i sinking or am i swimming?</a> - late night drive home</p>
+			<p><a href="2024/winter.html#1" target="parent">나는야 찌질이 (i'm a loser)</a> - hongbi</p>
+			<p><a href="2023/12.html#3" target="parent">yume no manimani</a> - weevildoing</p>
+			<p><a href="2023/12.html#2" target="parent">delulu</a> - lexie liu</p>
+			<p><a href="2023/12.html#1" target="parent">time-lapse</a> - yukika</p>
+			<p><a href="2023/11.html#5" target="parent">sweet crazy love</a> - odd eye circle</p>
+			<p><a href="2023/11.html#4" target="parent">bye-bye strobe</a> - erbatur</p>
+			<p><a href="2023/11.html#3" target="parent">BADモード (bad mode)</a> - hikaru utada</p>
+			<p><a href="2023/11.html#2" target="parent">tic! tac! toe!</a> - TAK x Corbin</p>
+			<p><a href="2023/11.html#1" target="parent">melting point</a> - zerobaseone</p>
 			<p><a href="2023/10.html#15" target="_parent">GOLDEN☆BEST 渡辺満里奈</a> - marina watanabe</p>
 			<p><a href="2023/10.html#14" target="_parent">voca works</a> - erbatur</p>
 			<p><a href="2023/10.html#13" target="_parent">ロンググッドバイ</a> - きのこ帝国 (kinokoteikoku)</p>
@@ -150,6 +161,7 @@
 			<p><a href="2023/04.html#2" target="_parent">アイドル (idol)</a> - yoasobi</p>
 			<p><a href="2023/04.html#1" target="_parent">here i stand</a> - yuragi</p>
 		</details>
+
 	</div>
 	<footer><a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a></footer>
 </body>
