added some links

--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -314,6 +314,7 @@
 		<li><a href="https://discord-timestamp-generator.vercel.app/" target="_blank">discord timestamp generator</a></li>
 		<li><a href="https://webmention.io/" target="_blank">webmention.io</a></li>
 		<li><a href="https://www.freshrss.org/" target="_blank">fresh RSS</a> - free, self-hostable feed aggregator</li>
+		<li><a href="https://tld-list.com/" target="_blank">tld-list</a> - compare domain prices</li>
 
 		<h3 id="add-on">firefox add-ons</h3>
 		<li><a href="https://addons.mozilla.org/en-US/firefox/addon/activate-reader-view/" target="_blank">force reader view</a></li>
@@ -323,11 +324,15 @@
 		<h2 id="fun">for fun</h2>
 		<li>my <a href="/sites/index.html" target="_parent">button wall</a> full of personal sites i like :3 check em out!</li>
 		<li><a href="https://cattherapy.neocities.org/" target="_blank">cat therapy</a> - shows you a random pic of a cat every 4 secs</li>
-		<li><a href="https://build.mmm.page/" target="_blank">mmm.page</a> - web page builder where you just drag and drop!</li>
 		<li><a href="https://www.windows93.net" target="_blank">windows93.net</a> - an old windows mock-up</li>
 		<li><a href="https://32bit.cafe" target="_blank">32bit.cafe</a> - a community of website hobbyists and professionals / <a href="https://discuss.32bit.cafe/" target="_blank">discuss.32bit.cafe</a></li>
 		<li><a href="https://we-b.site/" target="_blank">(we)bsite</a> - make a letter to the internet</li>
 		<li><a href="https://www.webdesignmuseum.org/" target="_blank">web design museum</a> - shows you various web designs throughout time!</li>
+		<li><a href="https://wiby.me/" target="_blank">wiby.me</a> - search engine that only indexes sites without JS</li>
+
+		<h3 id="dragndrop">drag n drop web builders</h3>
+		<li><a href="https://build.mmm.page/" target="_blank">mmm.page</a> </li>
+		<li><a href="https://straw.page/" target="_blank">straw.page</a></li>
 
 		<h3 id="music">music</h3>
 		<li><a href="https://www.tree.fm/">tree.fm</a> - listen to a forest!</li>
