new journal log

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -201,6 +201,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>25.jun.24: journal log: <a href="/journal">last day</a></li>
 			<li>21.jun.24: updated <a href="/scrapbook/2024/index.html#jun">june</a> scrapbook + added <i>kaiba</i> to <a href="/tv">TV</a> log</li>
 			<li>16.jun.24: journal log: <a href="/journal">guilt</a></li>
 			<li>12.jun.24: added new <a title="alterour setsuna pop + kokegane no uta" href="/music/cds">CD</a> to collection</li>
