jerome pics to photobook

--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -141,6 +141,17 @@ hiii this is a caption
 		<!-- 2nd column -->
 		<div class="column">
 
+			<div class="pic digi"><img src="!g/240625-jerome%20(1).jpg">
+				<img src="!g/240625-jerome%20(2).jpg">
+				<img src="!g/240625-jerome%20(3).jpg">
+				<img src="!g/240625-jerome%20(4).jpg">
+				<div class="hov">
+					<div class="caption">
+						ghost town of jerome. talk more about this place on my <a href="/journal/2024/06.html#25">journal log</a>
+					</div>
+				</div>
+			</div>
+
 			<div class="pic digi">
 				<img src="!g/240605-rose-garden%20(1).jpg">
 				<img src="!g/240605-rose-garden%20(2).jpg">
@@ -373,7 +384,7 @@ hiii this is a caption
 	<div id="home"><a title="go back to homepage" href="/"><img src="/!g/pix/polaroid_5.gif"></a></div>
 
 	<footer>
-		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 09.jun.24</b>
+		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 25.jun.24</b>
 		<br>
 		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a> / border-img from <a href="https://fujoshi.nekoweb.org" target="_blank">mimi</a>!
 		<br>
