updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -187,14 +187,17 @@
 			<a title="crisis.city" href="https://crisis.city" target="_blank"><img src="!g/crisis.city.gif" alt="crisis.city"></a>
 			<a title="rice" href="https://rice.nekoweb.org/" target="_blank"><img src="https://rice.nekoweb.org/kamabokogonpachiro.gif"></a>
 			<a title="humantooth" href="https://humantooth.neocities.org" target="_blank"><img src="!g/humantooth.png" alt="humantooth"></a>
+			<a title="raum" href="https://raum.neocities.org/" target="_blank"><img src="!g/raum.gif" alt="raum"></a>
+			<a title="feelingmachine" href="https://feelingmachine.moe/" target="_blank"><img src="!g/feelingmachine.png" alt="feelingmachine"></a>
 		</div>
+
+		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
 		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> /
 			<a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> /
 			<a href="https://pelagiczones.neocities.org/" target="_blank">pelagiczones</a> /
 			<a href="https://bubbly.neocities.org/" target="_blank">bubbly</a> /
-			<a title="one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/">2cherrish</a> /
 			<a href="https://yaebee.neocities.org/" target="_blank">yaebee</a> /
 			<a href="https://cyclopamine.neocities.org/" target="_blank">cyclopamine</a> /
 			<a href="https://maphren.neocities.org/" target="_blank">maphren</a> / <a href="https://innkeeper.neocities.org" target="_blank">innkeeper</a> / <a href="https://karameruu.neocities.org/" target="_blank">karameruu</a>
