--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -176,8 +176,6 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<div class="padding">
 
 				<h2>status</h2>
-				<b>news</b>: i finished the <a href="https://siinamota.doqmeat.com/fanlisting/" target="_blank">siinamota fanlisting</a>!
-				<br>
 				<span class="imood">i am feeling...</span> <a href="https://www.imood.com/users/doqmeat"><img src="https://moods.imood.com/display/uname-doqmeat/trans-1/imood.gif" alt="The current mood of doqmeat at www.imood.com" border="0"></a>
 
 				<div id="statuscafe">
@@ -219,6 +217,9 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="listing" class="box">
 			<h2>fanlistings &amp; cliques</h2>
+			<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting-cliques/siinamota-big.png" style="max-width: 100%" alt="siinamota fanlisting"></a>
+			<a href="https://theatregirl.net/cats/" target="_blank"><img src="!g/web/fanlisting-cliques/cats.png" alt="cats"></a>
+
 			<a href="https://movieloverfls.org/3ds/index.php" target="_blank"><img src="!g/web/fanlisting-cliques/3ds.jpg" alt="3ds"></a>
 
 			<a href="https://puppyluv-listings.neocities.org/enhypen/" target="_blank"><img src="!g/web/fanlisting-cliques/enhypen.png" alt="enhypen"></a>
@@ -259,7 +260,6 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="https://allyratworld.com/cafe/rose" target="_blank"><img src="/!g/web/fanlisting-cliques/88x31kuromi.png" alt="cafe rose banner"></a>
 
 			<br>
-			<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting-cliques/siinamota-big.png" style="max-width: 100%" alt="siinamota fanlisting"></a>
 			<a href="https://mizuki.world/nso/" target="_blank"><img src="/!g/web/fanlisting-cliques/nso.png" alt="needy streamer overdose fanlisting" style="max-width:100%"></a>
 
 			<br>
