--- a/doqmeat/notebook/F2U/preview/notebook.html
+++ b/doqmeat/notebook/F2U/preview/notebook.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <!-- 
-coded with love by des -->
+coded with love by des 
+don't take this code for your template cus it might be outdated or missing comments btw... i always update codepen and the github versions-->
 
 <head>
 	<meta charset="UTF-8">
@@ -181,8 +182,8 @@ coded with love by des -->
 		}
 
 		/* selected TAB effect */
-		.tab button.active,
-		.tab2 button.active {
+		.tab button:focus,
+		.tab2 button:focus {
 			top: 0px;
 			cursor: -webkit-grabbing;
 			cursor: grabbing;
@@ -253,8 +254,7 @@ coded with love by des -->
 					<p>heavily encouraged to edit and customize to your liking :) there's comments in the code with pointers and resources to help out if needed! if there's any questions feel free to send them my way</p>
 
 					<p>tested on both firefox and chrome</p>
-
-					<p>javascript code from <a href="https://www.w3schools.com/howto/howto_js_tabs.asp" target="_blank">w3schools</a></p>
+					<p>not compatible with mobile</p>
 
 					<!-- TAB 1 left paper end div -->
 				</div>
