--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -45,12 +45,43 @@ coded with love by des
 	<main>
 		<!-- 	TEMPLATE!!!!!!!!
 
-<div class="pic x"><img src="!g/160419-butter.jpg"><div class="hov"><div class="caption">
-hiii this is a caption
-</div></div></div>
+			<div class="pic x"><img src="!g/160419-butter.jpg">
+				<div class="hov">
+					<div class="caption">
+						hiii this is a caption
+					</div>
+				</div>
+			</div>
 -->
 		<!-- 1st column -->
 		<div class="column">
+
+			<div class="pic digi">
+				<img src="!g/231227-florida%20(7).jpg">
+				<img src="!g/231227-florida%20(9).jpg">
+				<img src="!g/231227-florida%20(1).jpg">
+				<img src="!g/231227-florida%20(2).jpg">
+				<img src="!g/231227-florida%20(3).jpg">
+				<img src="!g/231227-florida%20(4).jpg">
+				<img src="!g/231227-florida%20(5).jpg">
+				<img src="!g/231227-florida%20(6).jpg">
+				<img src="!g/231227-florida%20(8).jpg">
+				<img src="!g/231227-florida%20(10).jpg">
+				<img src="!g/231227-florida%20(11).jpg">
+				<img src="!g/231227-florida%20(12).jpg">
+				<img src="!g/231227-florida%20(13).jpg">
+				<img src="!g/231227-florida%20(14).jpg">
+				<img src="!g/231227-florida%20(15).jpg">
+				<img src="!g/231227-florida%20(16).jpg">
+				<img src="!g/231227-florida%20(17).jpg">
+				<div class="hov">
+					<div class="caption">
+						from my florida trip with my boyfriend :D we went to disney, bush gardens, sea world, and universal.<br>
+						<b>taken throughout december 2023</b>
+					</div>
+				</div>
+			</div>
+
 			<div class="pic digi"><img src="!g/240609-sunset.jpg">
 				<div class="hov">
 					<div class="caption">
@@ -224,6 +255,15 @@ hiii this is a caption
 
 		<div class="column">
 
+			<div class="pic film">
+				<img src="!g/240702-filmscans%20(2).jpg">
+				<div class="hov">
+					<div class="caption">
+						my little garden<br> <b>taken on 01.jul.24</b>
+					</div>
+				</div>
+			</div>
+
 			<div class="pic ds">
 				<img src="!g/240605-flower-garden-3ds%20(3).JPG">
 				<img src="!g/240605-flower-garden-3ds%20(1).JPG">
@@ -301,6 +341,25 @@ hiii this is a caption
 		</div>
 		<!-- 4th column -->
 		<div class="column">
+
+			<div class="pic film">
+				<img src="!g/240702-filmscans%20(1).jpg">
+				<img src="!g/240702-filmscans%20(3).jpg">
+				<img src="!g/240702-filmscans%20(4).jpg">
+				<img src="!g/240702-filmscans%20(5).jpg">
+				<img src="!g/240702-filmscans%20(6).jpg">
+				<img src="!g/240702-filmscans%20(7).jpg">
+				<img src="!g/240702-filmscans%20(8).jpg">
+				<img src="!g/240702-filmscans%20(9).jpg">
+				<div class="hov">
+					<div class="caption">
+						scanned some instax pics from my trip
+						<br>
+						<b>taken throughout june 2024</b>
+					</div>
+				</div>
+			</div>
+
 			<div class="pic ds">
 				<img src="!g/240608-river%20(3).JPG">
 				<img src="!g/240608-river%20(4).JPG">
@@ -384,7 +443,7 @@ hiii this is a caption
 	<div id="home"><a title="go back to homepage" href="/"><img src="/!g/pix/polaroid_5.gif"></a></div>
 
 	<footer>
-		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 25.jun.24</b>
+		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 02.jul.24</b>
 		<br>
 		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a> / border-img from <a href="https://fujoshi.nekoweb.org" target="_blank">mimi</a>!
 		<br>
