added scans to CDs

--- a/doqmeat/music/cds.html
+++ b/doqmeat/music/cds.html
@@ -139,7 +139,6 @@
 				<div class="hov">
 					<div class="caption">
 						<h3>アルターワー・セツナポップ / alterour setsuna pop - siinamota</h3>
-						<p><span class="placeholder"></span></p>
 						<p>got this for meee as a treat for my birthday!</p>
 						<p><small>will scan later</small></p>
 						<a class="i" href="!g/cds/setsunapop%20(3).jpg" target="_blank"><img src="!g/cds/setsunapop%20(3).jpg"></a>
@@ -235,17 +234,16 @@
 		</div>
 		<!-- 			column 3 -->
 		<div class="column">
-			<div class="cd"><img src="!g/fav-albums/kokeganenouta.jpg">
+			<div class="cd"><img src="!g/cds/kokegane.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>コケガネのうた / kokegane no uta - siinamota</h3>
 						<p><span class="fav"></span></p>
-						<p><span class="placeholder"></span></p>
-						<p><small>will scan later</small></p>
 						<p>the 2nd birthday gift i got for myself :3 the first was the alterour setsuna pop CD!</p>
 						<p>i've seen ppl reselling this album for more than $100 usd so i am SO happy i was able to get it through cdjapan for less than that!! i love this EP from siinamota so much.</p>
 						<a class="i" href="!g/cds/kokegane-back.jpg" target="_blank"><img src="!g/cds/kokegane-back.jpg"></a>
 						<p>also this album has such an amazing art featured in it's jewel case and booklet... since then i've been following the artist, <a href="https://twitter.com/tocomomomo" target="_blank" class="outlink">momoc</a>, on social media.</p>
+						<a class="i" href="!g/cds/kokegane-1.jpg" target="_blank"><img src="!g/cds/kokegane-1.jpg" alt="album scan"></a>
 
 						<p><span class="date"> 29.may.24</span></p>
 					</div>
@@ -415,7 +413,7 @@
 	<div id="home"><a class="i" title="go back to music page" href="/music"><img src="/!g/deco/cd.gif"></a></div>
 
 	<footer>
-		imgs on this page have been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 13.jun.24</b>
+		imgs on this page have been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 02.jul.24</b>
 		<br>
 		<b>credit:</b> background is from yukika's soul lady photobook! / <a href="/notebook/links/fonts.html">fonts</a> used: natsuzemi, gaegu, spirit
 		<br>
