--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -40,7 +40,7 @@
 		<a href="2023/04.html" target="_parent">april 2023</a>
 
 		<h4>RYM yearly logs</h4>
-		<p>comapared to the <i>listening logs</i> on my site, these RYM lists have everything <small>new</small> i've listened to on a yearly basis.</p>
+		<p>compared to the <i>listening logs</i> on my site, these RYM lists have everything <small>new</small> i've listened to on a yearly basis.</p>
 		<a href="https://rateyourmusic.com/list/doqmeat/2024-%F0%9F%93%9D%E2%AD%90/" target="_blank" class="outlink">2024</a>
 		<a href="https://rateyourmusic.com/list/doqmeat/2023" target="_blank" class="outlink">2023</a>
 		<a href="https://rateyourmusic.com/list/doqmeat/2022" target="_blank" class="outlink">2022</a>
